[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/menu inicial.gd" type="Script" id=1]
[ext_resource path="res://sprites/parallax.png" type="Texture" id=2]
[ext_resource path="res://sprites/TITULO SHOW.png" type="Texture" id=3]
[ext_resource path="res://sprites/controles_botao.png" type="Texture" id=4]
[ext_resource path="res://sprites/começar.png" type="Texture" id=5]
[ext_resource path="res://sprites/história.png" type="Texture" id=6]
[ext_resource path="res://sons/AQUELA_inicio.wav" type="AudioStream" id=7]
[ext_resource path="res://sons/botao.wav" type="AudioStream" id=8]

[node name="inicio" type="Node2D"]
script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1280, 0 )

[node name="parallax" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( -1280, 0 )
texture = ExtResource( 2 )
centered = false

[node name="TITULO SHOW" type="Sprite" parent="."]
position = Vector2( 487.416, 188.709 )
texture = ExtResource( 3 )

[node name="Comeco" type="TextureButton" parent="."]
margin_left = 357.818
margin_top = 345.218
margin_right = 613.818
margin_bottom = 421.218
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controles" type="TextureButton" parent="."]
margin_left = 214.187
margin_top = 451.052
margin_right = 470.187
margin_bottom = 527.052
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Historia" type="TextureButton" parent="."]
margin_left = 516.332
margin_top = 451.052
margin_right = 772.332
margin_bottom = 527.052
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = -0.960312
margin_top = 574.079
margin_right = 224.04
margin_bottom = 588.079
rect_scale = Vector2( 2, 2 )
text = "Feito por: Nokiojyn#2484 (discord) "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 212.145, 195.109 )
scale = Vector2( 8.74499, 2.47192 )

[node name="Botão" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
[connection signal="pressed" from="Comeco" to="." method="_on_Comeco_pressed"]
[connection signal="pressed" from="Controles" to="." method="_on_Controles_pressed"]
[connection signal="pressed" from="Historia" to="." method="_on_Historia_pressed"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
